Source/bmalloc/libpas/src/libpas/pas_deallocate.c
@@ -98,7 +98,7 @@ bool pas_try_deallocate_slow_no_cache(void* ptr,
 
     if (verbose)
         pas_log("Trying to deallocate %p.\n", ptr);
-    if (PAS_UNLIKELY(pas_debug_heap_is_enabled())) {
+    if (PAS_UNLIKELY(pas_debug_heap_is_enabled(config_ptr->kind))) {
         if (verbose)
             pas_log("Deallocating %p with debug heap.\n", ptr);
         PAS_ASSERT(deallocation_mode == pas_deallocate_mode);
